--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <!-- Meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Premium HTML5 Template by Indonez">
-    <meta name="keywords" content="blockit, uikit3, indonez, handlebars, scss, javascript">
-    <meta name="author" content="Peter Parker">
+    <meta name="description" content="Smart Convert">
+    <meta name="keywords" content="crypto trading">
+    <meta name="author" content="Samso9ite">
     <meta name="theme-color" content="#2E89EA" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
@@ -79,7 +79,7 @@
                                 <div class="row gx-md-5 align-items-md-center">
                                     <div class="col-md-8 col-xl-6 order-first">
                                         <h1 class="fw-bold display-5">RELIABLE & SECURE PLATFORM</h1>
-                                        <p class="lead mt-3 mb-4 d-none d-xl-block">We've always been here from the beginning and will always be here for your #InstantFunding.</p>
+                                        <p class="lead mt-3 mb-4 d-none d-xl-block">We've always been here from the beginning and will always be here for your InstantFunding.</p>
                                         <a href="https://app.smartconvert.ng/signin" class="btn btn-warning">Start trading<i class="fas fa-bolt ms-1"></i></a>
                                         <a href="https://api.whatsapp.com/send?phone=23407062946447&amp;text=I%20want%20to%20trade" class="btn btn-link ms-3 d-none d-xl-inline"><i class="fas fa-arrow-right"></i>Chat With Us</a>
                                     </div>
@@ -118,7 +118,7 @@
                                     <div class="card">
                                         <div class="card-body" style="color:#651430; font-weight: 600;">
                                             <img src="img/main/bitcoin-btc-logo.svg" alt="icon" width="46" height="46" />
-                                            <span id="btc_price"> </span> <br> Buy:<span id="btc_buy"> </span> <br> Sell: <span id="btc_sell">  </span>
+                                            <span id="btc_price"> </span> <br> <span id="btc_buy"> </span> <br>  <span id="btc_sell">  </span>
                                         </div>
                                     </div>
                                 </div>
@@ -127,7 +127,7 @@
                                     <div class="card">
                                         <div class="card-body" style="color:#651430; font-weight: 600;">
                                             <img src="img/main/ethereum-eth-logo.svg" alt="icon" width="46" height="46" />
-                                            <span id="eth_price"> </span> <br> Buy: <span id="eth_buy"> </span><br> Sell: <span id="eth_sell"></span> </span>
+                                            <span id="eth_price"> </span> <br> <span id="eth_buy"> </span><br> <span id="eth_sell"></span> </span>
                                         </div>
                                     </div>
                                 </div>
@@ -136,7 +136,7 @@
                                     <div class="card">
                                         <div class="card-body" style="color:#651430; font-weight: 600;">
                                             <img src="img/main/tether-usdt-logo.svg"" alt="icon" width="46" height="46" />
-                                            <span id="usdt_price"> </span> : 1<br> Buy: <span id="usdt_buy"> </span><br> Sell: <span id="usdt_sell"> </span> </span>
+                                            <span id="usdt_price"> </span> : 1<br>  <span id="usdt_buy"> </span><br> <span id="usdt_sell"> </span> </span>
                                         </div>
                                     </div>
                                 </div>
@@ -145,7 +145,7 @@
                                     <div class="card">
                                         <div class="card-body" style="color:#651430; font-weight: 600;">
                                             <img src="img/main/Perfect_Money_Logo.png" alt="icon" width="46" height="46" />
-                                            <span id="">1:1 </span> <br> Buy: <span id="perfectmoney_buy"> </span><br> Sell: <span id="perfectmoney_sell"> </span> </span>
+                                            <span id="">1:1 </span> <br> <span id="perfectmoney_buy"> </span><br> <span id="perfectmoney_sell"> </span> </span>
                                         </div>
                                     </div>
                                 </div>
@@ -154,7 +154,7 @@
                                     <div class="card">
                                         <div class="card-body" style="color:#651430; font-weight: 600;">
                                             <img src="img/main/dogecoin-doge-logo.svg" alt="icon" width="46" height="46" />
-                                            <span id="doge_price"> </span> <br> Buy: <span id="doge_buy"> </span> <br> Sell: <span id="doge_sell"> </span> </span>
+                                            <span id="doge_price"> </span> <br> <span id="doge_buy"> </span> <br> <span id="doge_sell"> </span> </span>
                                         </div>
                                     </div>
                                 </div>
@@ -163,7 +163,7 @@
                                     <div class="card">
                                         <div class="card-body" style="color:#651430; font-weight: 600;">
                                             <img src="img/main/litecoin-ltc-logo.svg" alt="icon" width="46" height="46" />
-                                            <span id="ltc_price"> </span> <br> Buy: <span id="litecoin_buy"> </span> <br> Sell: <span id="litecoin_sell"> </span> </span>
+                                            <span id="ltc_price"> </span> <br> <span id="litecoin_buy"> </span> <br> <span id="litecoin_sell"> </span> </span>
                                         </div>
                                     </div>
                                 </div>
@@ -193,8 +193,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <img src="img/in-cirro-2-icon-1.svg" alt="icon" width="46" height="46" />
-                                <h2 class="h5 mt-4">Create An Account</h2>
-                                <p>Create an account on our platform to start trading <a href="">New User?</a></p>
+                                <h2 class="h5 mt-4">Register & Verify ID</h2>
+                                <p>Sign up and go through a simple identity verification process before creating an order <a href="https://app.smartconvert.ng/signin">Create an account</a></p>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             <div class="card-body">
                                 <img src="img/in-cirro-2-icon-2.svg" alt="icon" width="46" height="46" />
                                 <h2 class="h5 mt-4">Save Bank Details</h2>
-                                <p>Input your account details with the registered name.</p>
+                                <p>Input your account details while our system automatically verify the account details.</p>
                             </div>
                         </div>
                     </div>
@@ -211,8 +211,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <img src="img/in-cirro-2-icon-3.svg" alt="icon" width="46" height="46" />
-                                <h2 class="h5 mt-4">Click on Buy or Sell </h2>
-                                <p>Click on either buy or sell to start trading with us.</p>
+                                <h2 class="h5 mt-4">Create Order </h2>
+                                <p>Login to your account, Click on Buy or Sell and fill in the necessary informations</p>
                             </div>
                         </div>
                     </div>
@@ -220,8 +220,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <img src="img/in-cirro-2-icon-4.svg" alt="icon" width="46" height="46" />
-                                <h2 class="h5 mt-4">Receive your coin or money</h2>
-                                <p>After  confirmation, we make instant payment.</p>
+                                <h2 class="h5 mt-4">Get your fund sent to you</h2>
+                                <p>Process time is instant, once our system confirms your transaction it will be marked as completed.</p>
                             </div>
                         </div>
                     </div>
@@ -283,8 +283,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-lg-6">
-                        <h1 class="mb-1">Some of the things you may want to know</h1>
-                        <p class="lead mb-4">We answered questions so you don’t have to ask.</p>
+                        <h1 class="mb-1">Why Trade with Smart Convert</h1>
+                        <p class="lead mb-4">We offer instant funding with a good rate.</p>
                         <a href="#" class="btn btn-link"><i class="fas fa-arrow-right"></i>Trade Now</a>
                     </div>
                     <div class="col-md-12 col-lg-6 mt-5 mt-lg-0">
@@ -292,48 +292,48 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#a5One" aria-expanded="true">
-                                        How do I open an account with Smart Convert?
+                                        Safe And Secure Secure Services
                                     </button>
                                 </h2>
                                 <div id="a5One" class="accordion-collapse collapse show" data-bs-parent="#sampleFive">
                                     <div class="accordion-body">
-                                        <p> Click on <a href="">Create An Account</a> then fill in all the required details, voila your account is created upon verification of your email address. Then you can start trading.  </p>
+                                        <p> We offer Same Day Funding & Payment into any Nigerian Banks. </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a5Two" aria-expanded="false">
-                                        How do I add my bank details?
+                                        We Exchange to Naira Vice Versa
                                     </button>
                                 </h2>
                                 <div id="a5Two" class="accordion-collapse collapse" data-bs-parent="#sampleFive">
                                     <div class="accordion-body">
-                                        <p>Click on the person/ acccount icon, select Bank then input all required details to add your bank details. Note that only account which carries the bearer name will be paid into.</p>
+                                        <p>Create buy or sell order for all crypto currency and Perfect Money anytime anyday.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a5Three" aria-expanded="false">
-                                        What's the least I can Trade?
+                                        Fast Service
                                     </button>
                                 </h2>
                                 <div id="a5Three" class="accordion-collapse collapse" data-bs-parent="#sampleFive">
                                     <div class="accordion-body">
-                                        <p>Each coin has it's own limit and will be displayed at the point of trading.</p>
+                                        <p>We work 24/7 and speed and speed is the key in our service </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a5Four" aria-expanded="false">
-                                        How will my payment be processed?
+                                        Market Rate
                                     </button>
                                 </h2>
                                 <div id="a5Four" class="accordion-collapse collapse" data-bs-parent="#sampleFive">
                                     <div class="accordion-body">
-                                        <p>Your payment will be snet to the given account at the point of creating the trade.</p>
+                                        <p>Cryptocurrency and Digital Currency Rate fluntuates but we will give the best rate.</p>
                                     </div>
                                 </div>
                             </div>
@@ -375,7 +375,7 @@
                                 <ul class="list-inline in-footer-link order-last order-xl-first">
                                     <li class="list-inline-item"><a href="#">info@smartconvert.com</a></li>
                                     <li class="list-inline-item"><a href="#">08112417083</a></li>
-                                    <li class="list-inline-item"><a href="#">WhatsApp(+234) 811 241 7083</a></li>
+                                    <li class="list-inline-item"><a href="verification.html">Verification</a></li>
                                 </ul>
                                 <div class="social-media-list small hstack gap-3 ms-lg-5 order-first order-xl-last">
                                     <div><a href="#" aria-label="social-link"><i class="fab fa-facebook-square"></i></a></div>
@@ -421,18 +421,43 @@
             type: "GET",
             url: "https://api.smartconvert.ng/api/v1/list-coin",
             success: function (result) {
-                document.getElementById("btc_buy").innerText = ' '+ '₦'+result[0].buy_rate; 
-                document.getElementById("btc_sell").innerText = ' '+ '₦'+result[0].sell_rate; 
-                document.getElementById("eth_buy").innerText = ' '+ '₦'+result[1].buy_rate; 
-                 document.getElementById("eth_sell").innerText = ' '+ '₦'+result[1].sell_rate; 
-                 document.getElementById("doge_buy").innerText = ' '+ '₦'+result[2].buy_rate; 
-                 document.getElementById("doge_sell").innerText = ' '+ '₦'+result[2].sell_rate; 
-                 document.getElementById("usdt_buy").innerText = ' '+ '₦'+result[3].buy_rate; 
-                 document.getElementById("usdt_sell").innerText = ' '+ '₦'+result[3].sell_rate; 
-                 document.getElementById("perfectmoney_buy").innerText = ' '+ '₦'+result[8].buy_rate;
-                 document.getElementById("perfectmoney_sell").innerText = ' '+ '₦'+result[8].sell_rate; 
-                 document.getElementById("litecoin_buy").innerText = ' '+ '₦'+result[6].buy_rate;
-                 document.getElementById("litecoin_sell").innerText = ' '+ '₦'+result[6].sell_rate; 
+                console.log(result)
+                if(result[0].buy_active_status == true){
+                    document.getElementById("btc_buy").innerText ='Buy: ₦'+result[0].buy_rate; 
+                }
+                if(result[0].sell_active_status == true){
+                document.getElementById("btc_sell").innerText = 'Sell: ₦'+result[0].sell_rate;
+                }
+                if(result[1].buy_active_status == true){
+                    document.getElementById("eth_buy").innerText = 'Buy: ₦'+result[1].buy_rate; 
+                }
+                if(result[1].sell_active_status == true){
+                    document.getElementById("eth_sell").innerText = 'Sell: ₦'+result[1].sell_rate; 
+                }
+                if(result[2].buy_active_status == true){
+                    document.getElementById("doge_buy").innerText = 'Buy: ₦'+result[2].buy_rate; 
+                }
+                if(result[2].sell_active_status == true){
+                    document.getElementById("doge_sell").innerText = 'Sell: ₦'+result[2].sell_rate; 
+                }
+                if(result[3].buy_active_status == true){
+                    document.getElementById("usdt_buy").innerText = 'Buy: ₦'+result[3].buy_rate; 
+                }
+                if(result[3].sell_active_status == true){
+                    document.getElementById("usdt_sell").innerText = 'Sell: ₦'+result[3].sell_rate; 
+                }
+                if(result[8].buy_active_status == true){
+                    document.getElementById("perfectmoney_buy").innerText = 'Buy: ₦'+result[8].buy_rate;
+                }
+                if(result[8].sell_active_status == true){
+                    document.getElementById("perfectmoney_sell").innerText = 'Sell: ₦'+result[8].sell_rate; 
+                }
+                if(result[6].sell_active_status == true){
+                    document.getElementById("litecoin_buy").innerText = 'Buy: ₦'+result[6].buy_rate;
+                }
+                if(result[6].sell_active_status == true){
+                    document.getElementById("litecoin_sell").innerText = 'Sell: ₦'+result[6].sell_rate; 
+                }
             }
     })
 }
